CORE-14484 Implement interop group management (#4221)
# Changes
- Refactor interop identity cache service for better isolation of holding identity views.
- Add registration endpoints.
- Update interop processor to make use of new registration.
- Add new interop identity lookup service for use at the flow level.

---------

Co-authored-by: JuliaFilipczak <julia.filipczak@r3.com>
Co-authored-by: saurabh.sonawane <saurabh.sonawane@r3.com>
Co-authored-by: Szymon Sztuka <szymon.sztuka@r3.com>
Co-authored-by: jmacmahonr3 <james.macmahon@r3.com>